--- a/components/styles/FinalCTASection.module.scss
+++ b/components/styles/FinalCTASection.module.scss
@@ -1,11 +1,11 @@
 .finalCta {
     background: linear-gradient(to bottom right, #66ff75, #00d17d);
-    color: white;
+    color: #222222bb;
     border-radius: 2rem;
     padding: 4rem 1rem;
     text-align: center;
     max-width: 1400px;
-    margin: 40px 10px;
+    margin: 20 auto;
   
     h2 {
       font-size: 2.5rem;
