--- a/components/styles/ContactPage.module.scss
+++ b/components/styles/ContactPage.module.scss
@@ -3,7 +3,11 @@
     margin: 0 auto;
     padding-top: 20px;
     text-align: center;
-    background: linear-gradient(180deg, #00d17d 0%, #66ff75 30%, #ffffff 37%);
+    background: linear-gradient(
+    170deg,
+    #00d17d 0%,
+    #66ff75 45%,
+    #ffffff 48%);
 
   
     h1 {
